--- a/reinforcement_learning/sc2/configs/pvz_medium_00.yaml
+++ b/reinforcement_learning/sc2/configs/pvz_medium_00.yaml
@@ -3,7 +3,7 @@ game:
     map: "Simple64"
     computer:
         race: Zerg
-        difficulty: Hard
+        difficulty: Medium
 
     realtime: False
 
@@ -22,15 +22,19 @@ observation:
     size : 128
     color : 
         mineral_visible : [0,255,0]
-        mineral_invisible : [0,50,0]
+        mineral_invisible : [0,128,0]
         vespene_geyser_visible : [0,255,0]
-        vespene_geyser_invisible : [0,50,0]
+        vespene_geyser_invisible : [0,128,0]
+
         structures :  [128,0,0]
-        units : [128,128,0]
-        units_marine : [255,255,0]
+        structures_barracks: [64,0,0,]
+        structures_supplydepot: [96,0,0,]
+        units : [225,225,0]
+        units_marine : [128,128,0]
+
         enemy_structures : [0,0,255]
-        enemy_structures_invisible : [128,128,128]
-        enemy_units : [0,255,255]
+        enemy_structures_invisible : [0,0,50]
+        enemy_units : [0,0,128]
 
 
 reward: 
